--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,7 +1,10 @@
-h2 {
-    font-size: 50pt;
+body {
     font-family: 'Poppins', sans-serif;
-    font-weight: 800;
+}
+
+h2 {
+    font-size: 60pt;
+    font-weight: 900;
 }
 
 #page-container {
@@ -14,7 +17,7 @@ h2 {
 
 #books-container {
     display: flex;
-    width: 30%;
+    width: 50%;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -24,13 +27,20 @@ h2 {
 .book {
     display: block;
     border-radius: 40px;
-    border: 5px solid #3E3E3E;
-    padding: 20px;
+    min-width: 150px;
+    max-width: 200px;
+    min-height: 100px;
+    border: 4px solid #3E3E3E;
+    padding: 15px 25px;
+    margin: 0 0 20px 0;
 }
 
-.book .new {
-    display: block;
-    border-radius: 40px;
-    background-color: lightgreen;
-    padding: 20px;
+.book__name {
+    font-size: 15pt;
+    font-weight: 900;
+}
+
+.book__year {
+    font-size: 12pt;
+    font-weight: 200;
 }
